--- a/Content/fourier_2D.ipynb
+++ b/Content/fourier_2D.ipynb
@@ -11,18 +11,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The Fourier Transform for functions depending on two variables $x$ and $y$ can be defined as follows:"
+    "The **2D Fourier Transform** for functions depending on two variables $x$ and $y$ can be defined as follows:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq51'></a>\n",
+    "<a id='eq1'></a>\n",
     "\n",
     "$$\n",
     "G(u, v) = \\int \\limits_{-\\infty}^{\\infty} \\int \\limits_{-\\infty}^{\\infty} \n",
-    "g(x, y) \\, e^{\\, -i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; dx \\, dy \\tag{51}\n",
+    "g(x, y) \\, e^{\\, -i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; dx \\, dy \\tag{1}\n",
     "$$"
    ]
   },
@@ -30,18 +30,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "and the inverse Fourier Transform is given by:"
+    "and the **2D Inverse Fourier Transform** is given by:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq52'></a>\n",
+    "<a id='eq2'></a>\n",
     "\n",
     "$$\n",
     "g(x, y) = \\int \\limits_{-\\infty}^{\\infty} \\int \\limits_{-\\infty}^{\\infty} \n",
-    "G(u, v) \\, e^{\\, i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; du \\, dv  \\quad ,\\tag{52}\n",
+    "G(u, v) \\, e^{\\, i \\, 2 \\, \\pi \\, \\left( u \\, x + v \\, y \\right)} \\; du \\, dv  \\quad ,\\tag{2}\n",
     "$$"
    ]
   },
@@ -49,17 +49,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "where $u$ and $v$ are the coordinates in the Fourier domain."
+    "where $u$ and $v$ are the coordinates in the Fourier domain (the frequencies)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq53'></a>\n",
+    "Now, lets discretize these integrals by following an approach similar to that used for the 1D case (notebook `fourier_1D_4`). Lets begin with the integral shown in [equation 1](#eq1):"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq3'></a>\n",
     "\n",
     "$$\n",
-    "x_{j} = j \\, \\Delta x \\: , \\quad j = 0, \\dots, M-1 \\tag{53}\n",
+    "x_{j} = j \\, \\Delta x \\: , \\quad j = 0, \\dots, M-1 \\tag{3}\n",
     "$$"
    ]
   },
@@ -67,10 +74,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq54'></a>\n",
+    "<a id='eq4'></a>\n",
     "\n",
     "$$\n",
-    "y_{k} = k \\, \\Delta y \\: , \\quad k = 0, \\dots, N-1 \\tag{54}\n",
+    "y_{k} = k \\, \\Delta y \\: , \\quad k = 0, \\dots, N-1 \\tag{4}\n",
     "$$"
    ]
   },
@@ -78,10 +85,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq55'></a>\n",
+    "<a id='eq5'></a>\n",
     "\n",
     "$$\n",
-    "u_{m} = \\frac{m}{M \\, \\Delta x} \\: , \\quad m = -\\frac{M}{2}, \\dots, \\frac{M}{2} - 1 \\tag{55}\n",
+    "u_{m} = \\frac{m}{M \\, \\Delta x} \\: , \\quad m = -\\frac{M}{2}, \\dots, \\frac{M}{2} - 1 \\tag{5}\n",
     "$$"
    ]
   },
@@ -89,10 +96,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq56'></a>\n",
+    "<a id='eq6'></a>\n",
     "\n",
     "$$\n",
-    "v_{n} = \\frac{n}{N \\, \\Delta y} \\: , \\quad n = -\\frac{N}{2}, \\dots, \\frac{N}{2} - 1 \\tag{56}\n",
+    "v_{n} = \\frac{n}{N \\, \\Delta y} \\: , \\quad n = -\\frac{N}{2}, \\dots, \\frac{N}{2} - 1 \\tag{6}\n",
     "$$"
    ]
   },
@@ -100,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq57a'></a>\n",
+    "<a id='eq7a'></a>\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -111,7 +118,7 @@
     "e^{- i 2 \\pi (\\frac{m j}{M} + \\frac{n k}{N})} \\\\\n",
     "&\\approx \\Delta x \\Delta y \\sum\\limits_{j=0}^{M-1}\\sum\\limits_{k=0}^{N-1} g_{jk} \n",
     "e^{- i 2 \\pi m j / M} e^{- i 2 \\pi n k / N} \\\\\n",
-    "\\end{split} \\tag{57a}\n",
+    "\\end{split} \\tag{7a}\n",
     "$$"
    ]
   },
@@ -119,10 +126,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq57b'></a>\n",
+    "<a id='eq7b'></a>\n",
     "\n",
     "$$\n",
-    "G_{mn} = \\sum\\limits_{j=0}^{M-1}\\sum\\limits_{k=0}^{N-1} g_{jk} e^{- i 2 \\pi m j / M} e^{- i 2 \\pi n k / N} \\tag{57b}\n",
+    "G_{mn} = \\sum\\limits_{j=0}^{M-1}\\sum\\limits_{k=0}^{N-1} g_{jk} e^{- i 2 \\pi m j / M} e^{- i 2 \\pi n k / N} \\tag{7b}\n",
     "$$"
    ]
   },
@@ -137,18 +144,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq58'></a>\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{G} = \\mathbf{W}_{M} \\, \\mathbf{g} \\, \\mathbf{W}_{N} \\tag{58}\n",
-    "$$"
+    " Now, by discretizing [equation 2](#eq2), we obtain:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq59a'></a>\n",
+    "<a id='eq8a'></a>\n",
     "\n",
     "$$\n",
     "\\begin{split}\n",
@@ -161,7 +164,7 @@
     "e^{i 2 \\pi (\\frac{m j}{M} + \\frac{n k}{N})} \\\\\n",
     "&\\approx \\frac{1}{M \\, N} \\sum\\limits_{m=-\\frac{M}{2}}^{\\frac{M}{2}-1}\\sum\\limits_{n=-\\frac{N}{2}}^{\\frac{N}{2}-1} \n",
     "G_{mn} \\, e^{i 2 \\pi m j / M} e^{i 2 \\pi n k / N} \\\\\n",
-    "\\end{split} \\tag{59a}\n",
+    "\\end{split} \\quad . \\tag{8a}\n",
     "$$"
    ]
   },
@@ -169,12 +172,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq59b'></a>\n",
+    "In order to better understand the equations [7b](#eq7b) and [8a](#eq8a), lets analyze the relationship between the elements $g_{j k}$, $G_{m n}$ and the indices $j$, $m$, $n$ and $k$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As you may have noticed, equations [7b](#eq7b) and [8a](#eq8a) show that $G_{mn}$ and $g_{jk}$ are elements of $M \\times N$ matrices $\\mathbf{G}$ and $\\mathbf{g}$, respectively. Besides, equations [3](#eq3) and [5](#eq5) establish a relationship between indices $j$ and $m$ and equations [4](#eq4) and [6](#eq6) establish a relationship between indices $k$ and $n$. Similarly to the 1D case, the product of these indices defines the exponent of complex exponentials $e^{\\pm i 2 \\pi m j / M}$ and $e^{\\pm i 2 \\pi n k / N}$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "See the file `discrete_fourier_examples.pdf` to understand the relationship between the elements $G_{mn}$, $g_{jk}$ and the indices $j$, $m$, $n$ and $k$. This relationship results in a reorganization of the indices $mn$, so that the summation in [equation 8a](#eq8a) can be rewritten as follows:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq8b'></a>\n",
     "\n",
     "$$\n",
     "g_{jk} \\approx \\frac{1}{M \\, N}\\sum\\limits_{m=0}^{M-1}\\sum\\limits_{n=0}^{N-1} \n",
     "G_{mn} \\, e^{i 2 \\pi m j / M} e^{i 2 \\pi n k / N} \n",
-    "\\tag{59b}\n",
+    "\\quad . \\tag{8b}\n",
     "$$"
    ]
   },
@@ -182,11 +206,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='eq60'></a>\n",
+    "After reorganizing the indices, we can see that [equation 7b](#eq7b) can be rewritten in matrix form: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq9'></a>\n",
     "\n",
     "$$\n",
-    "\\mathbf{g} = \\frac{1}{M \\, N} \\tilde{\\mathbf{W}}_{M} \\, \\mathbf{G} \\, \\tilde{\\mathbf{W}}_{N} \\tag{60}\n",
+    "\\mathbf{G} = \\mathbf{F}_{M} \\, \\mathbf{g} \\, \\mathbf{F}_{N} \\: , \\tag{9}\n",
     "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\mathbf{G}$ is an $M \\times N$ matrix containing the DFT, $\\mathbf{g}$ is an $M \\times N$ matrix containing the data and $\\mathbf{F}_{M}$ and $\\mathbf{F}_{N}$ are the Fourier matrices (see the notebook `fourier_1D_4`) of order $M$ and $N$, respectively. [Equation 9](#eq9) represents the 2D Discrete Fourier Transform (**2D DFT**). Similarly, we can see that  [equation 8b](#eq8b) can also be rewritten in matrix form:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq10'></a>\n",
+    "\n",
+    "$$\n",
+    "\\mathbf{g} = \\frac{1}{M \\, N} \\mathbf{F}_{M}^{H} \\, \\mathbf{G} \\, \\mathbf{F}_{N}^{H} \\quad . \\tag{10}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[Equation 10](#eq10) represents the 2D Inverse Discrete Fourier Transform (**2D IDFT**)."
    ]
   },
   {
@@ -231,7 +287,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from scipy.fftpack import fft2, ifft2"
+    "from scipy.fft import fft2, ifft2"
    ]
   },
   {
@@ -250,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WN = dft(N, scale=None)"
+    "FN = dft(N, scale=None)"
    ]
   },
   {
@@ -259,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "WM = dft(M, scale=None)"
+    "FM = dft(M, scale=None)"
    ]
   },
   {
@@ -286,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FTA2 = mdot([WN, A, WM])"
+    "FTA2 = mdot([FN, A, FM])"
    ]
   },
   {
@@ -324,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFTA2 = (1/(N*M))*mdot([np.conjugate(WN), FTA2, np.conjugate(WM)])"
+    "IFTA2 = (1/(N*M))*mdot([np.conjugate(FN), FTA2, np.conjugate(FM)])"
    ]
   },
   {
