--- a/Content/fourier_series_2pi.ipynb
+++ b/Content/fourier_series_2pi.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Fourier series of simple functions"
+    "# Fourier series of simple functions with period $2\\pi$"
    ]
   },
   {
