--- a/Content/fourier_1D_intro.ipynb
+++ b/Content/fourier_1D_intro.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 1D Fourier Transform - part 6"
+    "# 1D Fourier Transform - introduction"
    ]
   },
   {
