Fourier 2D, conv 2D and Kronecker product

--- a/Content/fourier_2D.ipynb
+++ b/Content/fourier_2D.ipynb
@@ -296,8 +296,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "N = 7\n",
-    "M = 11"
+    "M = 7\n",
+    "N = 11"
    ]
   },
   {
@@ -306,7 +306,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FN = dft(N, scale=None)"
+    "FM = dft(M, scale=None)"
    ]
   },
   {
@@ -315,7 +315,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FM = dft(M, scale=None)"
+    "FN = dft(N, scale=None)"
    ]
   },
   {
@@ -324,7 +324,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.random.rand(N, M)"
+    "A = np.random.rand(M, N)"
    ]
   },
   {
@@ -342,7 +342,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "FTA2 = mdot([FN, A, FM])"
+    "FTA2 = mdot([FM, A, FN])"
    ]
   },
   {
@@ -380,7 +380,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "IFTA2 = (1/(N*M))*mdot([np.conjugate(FN), FTA2, np.conjugate(FM)])"
+    "IFTA2 = (1/(N*M))*mdot([np.conjugate(FM), FTA2, np.conjugate(FN)])"
    ]
   },
   {
