cite the note `Content/conv_1D2D/conv_1D.jpg`

--- a/Content/convolution_correlation_1D_1.ipynb
+++ b/Content/convolution_correlation_1D_1.ipynb
@@ -85,7 +85,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The linear convolution ([equation 1](#eq1)) is schematically represented as follows (e.g., Yilmaz, 2001, p. 39):"
+    "The linear convolution ([equation 1](#eq1)) is schematically represented in `Content/conv_1D2D/conv_1D.jpg` and in the cell below (e.g., Yilmaz, 2001, p. 39):"
    ]
   },
   {
@@ -603,7 +603,9 @@
    "metadata": {},
    "source": [
     "where $\\lfloor \\cdot \\rfloor$ denotes the **floor** function (Graham et al., 1994, p. 67), which computes the\n",
-    "greatest integer less than or equal to its argument. The mod function is implemented in the routine [`numpy.mod`](https://numpy.org/doc/stable/reference/generated/numpy.mod.html)."
+    "greatest integer less than or equal to its argument. The mod function is implemented in the routine [`numpy.mod`](https://numpy.org/doc/stable/reference/generated/numpy.mod.html).\n",
+    "\n",
+    "The circular convolution ([equation 6](#eq6)) is schematically represented in `Content/conv_1D2D/conv_1D.jpg` and in the cell below:"
    ]
   },
   {
