--- a/Content/kronecker-product.ipynb
+++ b/Content/kronecker-product.ipynb
@@ -132,9 +132,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.28504691 0.14125843 0.26827027 0.25281422]\n",
-      " [0.31210281 0.81128487 0.85484176 0.47271245]\n",
-      " [0.49792762 0.51192315 0.37108006 0.01934159]]\n"
+      "[[0.26748972 0.52791847 0.77860038 0.81383297]\n",
+      " [0.98263864 0.9992426  0.15667369 0.9724966 ]\n",
+      " [0.31046894 0.81214042 0.44177935 0.34265088]]\n"
      ]
     }
    ],
@@ -151,8 +151,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.17286001 0.5970379  0.77745973]\n",
-      " [0.34202057 0.2701088  0.75782418]]\n"
+      "[[0.84463183 0.19731041 0.32089693]\n",
+      " [0.22649296 0.51949212 0.27758031]]\n"
      ]
     }
    ],
@@ -198,18 +198,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.04927321 0.17018381 0.22161249 0.02441793 0.08433664 0.10982274\n",
-      "  0.0463732  0.16016752 0.20856933 0.04370147 0.15093967 0.19655288]\n",
-      " [0.0974919  0.07699368 0.21601544 0.04831329 0.03815514 0.10704905\n",
-      "  0.09175395 0.07246216 0.2033017  0.08646766 0.06828734 0.19158873]\n",
-      " [0.0539501  0.18633721 0.24264736 0.14023871 0.48436782 0.63074132\n",
-      "  0.14776796 0.51037293 0.66460505 0.08171308 0.28222725 0.3675149 ]\n",
-      " [0.10674558 0.08430171 0.23651905 0.27747611 0.21913518 0.61481129\n",
-      "  0.29237346 0.23090028 0.64781976 0.16167738 0.12768379 0.35823293]\n",
-      " [0.08607178 0.29728166 0.38711867 0.08849104 0.30563753 0.39799964\n",
-      "  0.06414491 0.22154886 0.28849981 0.00334339 0.01154766 0.0150373 ]\n",
-      " [0.17030149 0.13449463 0.37734159 0.17508825 0.13827495 0.38794775\n",
-      "  0.12691701 0.10023199 0.28121345 0.00661522 0.00522433 0.01465752]]\n"
+      "[[0.22593033 0.05277851 0.08583663 0.44589674 0.10416381 0.16940741\n",
+      "  0.65763067 0.15362596 0.24985047 0.68738923 0.16057771 0.2611565 ]\n",
+      " [0.06058454 0.1389588  0.07424988 0.11956982 0.27424948 0.14653977\n",
+      "  0.17634751 0.40447676 0.21612414 0.18432744 0.42277981 0.22590401]\n",
+      " [0.82996788 0.19388483 0.31532572 0.84399211 0.19716096 0.32065388\n",
+      "  0.13233159 0.03091335 0.05027611 0.82140159 0.1918837  0.31207117]\n",
+      " [0.22256074 0.51047303 0.27276114 0.22632142 0.51909865 0.27737007\n",
+      "  0.03548549 0.08139075 0.04348953 0.22026364 0.50520432 0.26994591]\n",
+      " [0.26223195 0.06125875 0.09962853 0.68595965 0.16024376 0.26061336\n",
+      "  0.3731409  0.08716766 0.14176564 0.28941384 0.06760859 0.10995562]\n",
+      " [0.07031903 0.16128617 0.08618006 0.18394409 0.42190054 0.22543419\n",
+      "  0.10005991 0.22950089 0.12262925 0.07760801 0.17800443 0.09511314]]\n"
      ]
     }
    ],
@@ -266,9 +266,17 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 4 2 3\n"
+     ]
+    }
+   ],
    "source": [
-    "v = np.arange(M*P)"
+    "print(N, M, L, P)"
    ]
   },
   {
@@ -279,10 +287,39 @@
     {
      "data": {
       "text/plain": [
-       "(12,)"
+       "(6, 12)"
       ]
      },
      "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Kron_AB.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "v = np.arange(M*P)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(12,)"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -293,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +339,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +368,7 @@
        "(6,)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,17 +379,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 8.7058809 ,  7.59456106, 23.55993867, 20.56596263,  9.10422782,\n",
-       "        7.8931277 ])"
+       "array([20.51080546, 16.46596946, 19.90525185, 16.33258991, 12.73590295,\n",
+       "       10.4129124 ])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +419,7 @@
        "(4, 3)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +442,7 @@
        "       [ 9, 10, 11]])"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -416,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +462,7 @@
        "array([ 0,  1,  2,  3,  4,  5,  6,  7,  8,  9, 10, 11])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,54 +473,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reorganize w along the rows of W\n",
     "W = np.reshape(w, (N, L))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 2)"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "W.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 8.7058809 ,  7.59456106],\n",
-       "       [23.55993867, 20.56596263],\n",
-       "       [ 9.10422782,  7.8931277 ]])"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "W"
    ]
   },
   {
@@ -494,8 +489,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 8.7058809 ,  7.59456106, 23.55993867, 20.56596263,  9.10422782,\n",
-       "        7.8931277 ])"
+       "(3, 2)"
       ]
      },
      "execution_count": 22,
@@ -504,7 +498,7 @@
     }
    ],
    "source": [
-    "w"
+    "W.shape"
    ]
   },
   {
@@ -515,10 +509,53 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "array([[20.51080546, 16.46596946],\n",
+       "       [19.90525185, 16.33258991],\n",
+       "       [12.73590295, 10.4129124 ]])"
       ]
      },
      "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([20.51080546, 16.46596946, 19.90525185, 16.33258991, 12.73590295,\n",
+       "       10.4129124 ])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +605,7 @@
        "(9, 8)"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -579,33 +616,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.04927321, 0.02441793, 0.0463732 , 0.04370147, 0.0974919 ,\n",
-       "        0.04831329, 0.09175395, 0.08646766],\n",
-       "       [0.0539501 , 0.14023871, 0.14776796, 0.08171308, 0.10674558,\n",
-       "        0.27747611, 0.29237346, 0.16167738],\n",
-       "       [0.08607178, 0.08849104, 0.06414491, 0.00334339, 0.17030149,\n",
-       "        0.17508825, 0.12691701, 0.00661522],\n",
-       "       [0.17018381, 0.08433664, 0.16016752, 0.15093967, 0.07699368,\n",
-       "        0.03815514, 0.07246216, 0.06828734],\n",
-       "       [0.18633721, 0.48436782, 0.51037293, 0.28222725, 0.08430171,\n",
-       "        0.21913518, 0.23090028, 0.12768379],\n",
-       "       [0.29728166, 0.30563753, 0.22154886, 0.01154766, 0.13449463,\n",
-       "        0.13827495, 0.10023199, 0.00522433],\n",
-       "       [0.22161249, 0.10982274, 0.20856933, 0.19655288, 0.21601544,\n",
-       "        0.10704905, 0.2033017 , 0.19158873],\n",
-       "       [0.24264736, 0.63074132, 0.66460505, 0.3675149 , 0.23651905,\n",
-       "        0.61481129, 0.64781976, 0.35823293],\n",
-       "       [0.38711867, 0.39799964, 0.28849981, 0.0150373 , 0.37734159,\n",
-       "        0.38794775, 0.28121345, 0.01465752]])"
+       "array([[0.22593033, 0.44589674, 0.65763067, 0.68738923, 0.06058454,\n",
+       "        0.11956982, 0.17634751, 0.18432744],\n",
+       "       [0.82996788, 0.84399211, 0.13233159, 0.82140159, 0.22256074,\n",
+       "        0.22632142, 0.03548549, 0.22026364],\n",
+       "       [0.26223195, 0.68595965, 0.3731409 , 0.28941384, 0.07031903,\n",
+       "        0.18394409, 0.10005991, 0.07760801],\n",
+       "       [0.05277851, 0.10416381, 0.15362596, 0.16057771, 0.1389588 ,\n",
+       "        0.27424948, 0.40447676, 0.42277981],\n",
+       "       [0.19388483, 0.19716096, 0.03091335, 0.1918837 , 0.51047303,\n",
+       "        0.51909865, 0.08139075, 0.50520432],\n",
+       "       [0.06125875, 0.16024376, 0.08716766, 0.06760859, 0.16128617,\n",
+       "        0.42190054, 0.22950089, 0.17800443],\n",
+       "       [0.08583663, 0.16940741, 0.24985047, 0.2611565 , 0.07424988,\n",
+       "        0.14653977, 0.21612414, 0.22590401],\n",
+       "       [0.31532572, 0.32065388, 0.05027611, 0.31207117, 0.27276114,\n",
+       "        0.27737007, 0.04348953, 0.26994591],\n",
+       "       [0.09962853, 0.26061336, 0.14176564, 0.10995562, 0.08618006,\n",
+       "        0.22543419, 0.12262925, 0.09511314]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -616,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +671,7 @@
        "(8,)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +691,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7])"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -665,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +720,7 @@
        "(9,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,17 +731,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([ 2.03560013,  5.38125918,  2.59126682,  2.26902548,  6.0638664 ,\n",
-       "        2.65069376,  5.07685833, 13.47717779,  6.25909959])"
+       "array([7.01189014, 7.34946846, 4.64509512, 8.20655071, 9.49679885,\n",
+       "       5.91508858, 5.36034914, 5.98587312, 3.74747018])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -725,7 +762,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +771,7 @@
        "(4, 2)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -745,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +794,7 @@
        "       [3, 7]])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -777,7 +814,7 @@
        "array([0, 1, 2, 3, 4, 5, 6, 7])"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -788,54 +825,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "# reorganize w along the columns of W\n",
     "W = np.reshape(w, (P, N)).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 3)"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "W.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 2.03560013,  2.26902548,  5.07685833],\n",
-       "       [ 5.38125918,  6.0638664 , 13.47717779],\n",
-       "       [ 2.59126682,  2.65069376,  6.25909959]])"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "W"
    ]
   },
   {
@@ -846,8 +841,7 @@
     {
      "data": {
       "text/plain": [
-       "array([ 2.03560013,  5.38125918,  2.59126682,  2.26902548,  6.0638664 ,\n",
-       "        2.65069376,  5.07685833, 13.47717779,  6.25909959])"
+       "(3, 3)"
       ]
      },
      "execution_count": 40,
@@ -856,7 +850,7 @@
     }
    ],
    "source": [
-    "w"
+    "W.shape"
    ]
   },
   {
@@ -867,10 +861,53 @@
     {
      "data": {
       "text/plain": [
-       "True"
+       "array([[7.01189014, 8.20655071, 5.36034914],\n",
+       "       [7.34946846, 9.49679885, 5.98587312],\n",
+       "       [4.64509512, 5.91508858, 3.74747018]])"
       ]
      },
      "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "W"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([7.01189014, 7.34946846, 4.64509512, 8.20655071, 9.49679885,\n",
+       "       5.91508858, 5.36034914, 5.98587312, 3.74747018])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "w"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
