reorder last pages of notes

--- a/Content/convolution_2D_1.ipynb
+++ b/Content/convolution_2D_1.ipynb
@@ -126,7 +126,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cells illustrate the particular case in which $M_{a} = 6$, $N_{a} = 4$, $M_{b} = 5$ and $N_{b} = 3$ (pages 12 and 13 of the notes at `Content/conv_1D2D/`)."
+    "The following cells illustrate the particular case in which $M_{a} = 6$, $N_{a} = 4$, $M_{b} = 5$ and $N_{b} = 3$ (pages 11 and 12 of the notes at `Content/conv_1D2D/`)."
    ]
   },
   {
@@ -713,7 +713,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The following cells illustrate the particular case in which $M = 5$ and $N = 4$ (pages 14 and 15 of the notes at `Content/conv_1D2D/`)."
+    "The following cells illustrate the particular case in which $M = 5$ and $N = 4$ (page 13 the notes at `Content/conv_1D2D/`)."
    ]
   },
   {
