--- a/Content/Block_Toeplitz_circulant_matrices.ipynb
+++ b/Content/Block_Toeplitz_circulant_matrices.ipynb
@@ -1642,71 +1642,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 75,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-75-b4dacaf1ea1d>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-75-b4dacaf1ea1d>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    PAREI AQUI\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "PAREI AQUI"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The $4MN \\times 1$ vectors $\\mathbf{p}$ and $\\mathbf{q}$ are given by:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{p} = \\begin{bmatrix}\n",
-    "\\mathbf{p}_{1} \\\\\n",
-    "\\mathbf{p}_{2} \\\\\n",
-    "\\vdots \\\\\n",
-    "\\mathbf{p}_{M} \\\\\n",
-    "\\mathbf{0}_{(2MN)}\n",
-    "\\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "and\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{q} = \\begin{bmatrix}\n",
-    "\\mathbf{q}_{1} \\\\\n",
-    "\\mathbf{q}_{2} \\\\\n",
-    "\\vdots \\\\\n",
-    "\\mathbf{q}_{M} \\\\\n",
-    "\\mathbf{0}_{(2MN)}\n",
-    "\\end{bmatrix} \\: ,\n",
-    "$$\n",
-    "\n",
-    "where $\\mathbf{0}_{(2MN)}$ is a $2MN \\times 1$ vetor of zeros,\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{p}_{\\ell} = \\begin{bmatrix}\n",
-    "\\mathbf{v}_{\\ell} \\\\\n",
-    "\\mathbf{0}_{(N)}\n",
-    "\\end{bmatrix} \\: ,\n",
-    "$$\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{q}_{\\ell} = \\begin{bmatrix}\n",
-    "\\mathbf{w}_{\\ell} \\\\\n",
-    "\\mathbf{0}_{(N)}\n",
-    "\\end{bmatrix}\n",
-    "$$\n",
-    "\n",
-    "and $\\mathbf{0}_{(N)}$ is a $N \\times 1$ vetor of zeros."
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1720,306 +1655,123 @@
    "source": [
     "Let's consider the product\n",
     "\n",
+    "<a id='eq16'></a>\n",
     "$$\n",
-    "\\mathbf{T} \\mathbf{v} = \\mathbf{w} \\: ,\n",
+    "\\mathbf{T}_{BTTB} \\, \\mathbf{x} = \\mathbf{y} \\: , \\tag{16}\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{T}$ is a BTTB matrix given by\n",
-    "\n",
+    "where $\\mathbf{T}_{BTTB}$ is a BTTB matrix formed by a $Q \\times Q$ grid of $P \\times P$ blocks (e.g., equations [10a](#eq10a) and [10b](#eq10b)), "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='eq17'></a>\n",
     "$$\n",
-    "\\mathbf{T} = \\begin{bmatrix}\n",
-    "\\mathbf{T}_{1} & \\cdots & \\mathbf{T}_{M} \\\\\n",
-    "\\vdots & \\ddots & \\vdots \\\\\n",
-    "\\mathbf{T}_{-M} & \\cdots & \\mathbf{T}_{1}\n",
-    "\\end{bmatrix} \\: ,\n",
-    "$$\n",
-    "where $\\mathbf{T}_{\\ell}$, $\\ell = -M, \\dots, 1, \\dots, M$, are $N \\times N$ Toeplitz matrices whose $ij$-th element is represented by $t^{\\ell}_{ij}$ and the vectors $\\mathbf{v}$ and $\\mathbf{w}$ are conveninetly defined as follows:\n",
-    "\n",
-    "$$\n",
-    "\\mathbf{v} = \\begin{bmatrix}\n",
-    "\\mathbf{v}_{1} \\\\\n",
-    "\\mathbf{v}_{2} \\\\\n",
+    "\\mathbf{x} = \\begin{bmatrix}\n",
+    "\\mathbf{x}_{0} \\\\\n",
+    "\\mathbf{x}_{1} \\\\\n",
     "\\vdots \\\\\n",
-    "\\mathbf{v}_{M}\n",
-    "\\end{bmatrix}\n",
+    "\\mathbf{x}_{Q-1}\n",
+    "\\end{bmatrix} \\tag{17}\n",
     "$$\n",
     "\n",
     "and\n",
     "\n",
+    "<a id='eq18'></a>\n",
     "$$\n",
-    "\\mathbf{w} = \\begin{bmatrix}\n",
-    "\\mathbf{w}_{1} \\\\\n",
-    "\\mathbf{w}_{2} \\\\\n",
+    "\\mathbf{y} = \\begin{bmatrix}\n",
+    "\\mathbf{y}_{0} \\\\\n",
+    "\\mathbf{y}_{1} \\\\\n",
     "\\vdots \\\\\n",
-    "\\mathbf{w}_{M}\n",
-    "\\end{bmatrix} \\: ,\n",
+    "\\mathbf{y}_{Q-1}\n",
+    "\\end{bmatrix} \\: , \\tag{18}\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{v}_{\\ell}$ and $\\mathbf{w}_{\\ell}$, $\\ell = 1, \\dots, M$, are $N \\times 1$ vectors."
+    "where $\\mathbf{x}_{k}$ and $\\mathbf{y}_{k}$, $k = 0, \\dots, Q-1$, are $P \\times 1$ vectors."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In order to compute the matrix-vetor product $\\mathbf{T} \\mathbf{v}$ efficiently, let's transform it in the auxiliary matrix-vector product\n",
+    "In order to compute the matrix-vetor product defined by [equation 16](#eq16), let's transform it in the auxiliary matrix-vector product\n",
     "\n",
+    "<a id='eq19'></a>\n",
     "$$\n",
-    "\\mathbf{C} \\mathbf{p} = \\mathbf{q} \\: ,\n",
+    "\\mathbf{C}_{BCCB} \\, \\mathbf{p} = \\mathbf{q} \\: , \\tag{19}\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{p}$ and $\\mathbf{q}$ are $4MN \\times 1$ vectors and $\\mathbf{C}$ is a $4MN \\times 4MN$ Block Circulant formed by Circulant Blocks (BCCB) matrix. "
+    "where $\\mathbf{C}$ is a $4QP \\times 4QP$ embedding BCCB matrix (equations [13](#eq13)-[15b](#eq15b)) and $\\mathbf{p}$ and $\\mathbf{q}$ are $4QP \\times 1$ vectors given by  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By using the Kronecker product properties, the auxiliary matrix-vetor product can be rewritten as follows:\n",
-    "\n",
+    "<a id='eq20'></a>\n",
     "$$\n",
-    "\\mathbf{F}_{(2M)}^{\\ast} \\left[ \\mathbf{L} \\circ \\left( \\mathbf{F}_{(2M)} \\mathbf{P} \\, \\mathbf{F}_{(2N)} \\right) \\right] \\mathbf{F}_{(2N)}^{\\ast} = \\mathbf{Q} \\: ,\n",
+    "\\mathbf{p} = \\begin{bmatrix}\n",
+    "\\mathbf{p}_{0} \\\\\n",
+    "\\mathbf{p}_{1} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\mathbf{p}_{Q-1} \\\\\n",
+    "\\mathbf{0}_{2QP}\n",
+    "\\end{bmatrix} \\tag{20}\n",
     "$$\n",
     "\n",
-    "where \"$\\circ$\" denotes the [**Hadamard product**](https://en.wikipedia.org/wiki/Hadamard_product_(matrices)), $\\mathbf{L}$ is a $2M \\times 2N$ row-oriented matrix containing the eigenvalues of $\\mathbf{C}_{(BCCB)}$, and $\\mathbf{P}$ and $\\mathbf{Q}$ are $2M \\times 2N$ row-oriented matrices obtained from the vectors $\\mathbf{p}$ and $\\mathbf{q}$."
+    "and\n",
+    "\n",
+    "<a id='eq21'></a>\n",
+    "$$\n",
+    "\\mathbf{q} = \\begin{bmatrix}\n",
+    "\\mathbf{q}_{0} \\\\\n",
+    "\\mathbf{q}_{1} \\\\\n",
+    "\\vdots \\\\\n",
+    "\\mathbf{q}_{Q-1} \\\\\n",
+    "\\mathbf{0}_{2QP}\n",
+    "\\end{bmatrix} \\: . \\tag{21}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The algoritmh for computing the matrix-vector product $\\mathbf{T}\\mathbf{v}$ and obtaining the resulting vector $\\mathbf{w}$ can be summarized in the following steps:\n",
+    "In equations [20](#eq20) and [21](#eq21), $\\mathbf{0}_{2QP}$ is a $2QP \\times 1$ vetor of zeros,\n",
     "\n",
-    "1. Compute the first column of the embedding $4MN \\times 4MN$ BCCB matrix $\\mathbf{C}$ by using the first column of the $MN \\times MN$ BTTB matrix $\\mathbf{T}$;\n",
-    "2. Compute the eigenvalues of $\\mathbf{C}$ and rearrange them in rows of the $2M \\times 2N$ matrix $\\mathbf{L}$;\n",
-    "3. Rearrange the vector $\\mathbf{p}$ in the rows of the $2M \\times 2N$ matrix $\\mathbf{P}$;\n",
-    "4. Compute the Hadammard product $\\mathbf{L} \\circ \\tilde{\\mathbf{P}}$, where $\\tilde{\\mathbf{P}} = \\mathbf{F}_{(2M)} \\mathbf{P} \\, \\mathbf{F}_{(2N)}$ is computed by using a fast algorithm for 2D DFT;\n",
-    "5. Compute the resulting $2M \\times 2N$ matrix $\\mathbf{Q} = \\mathbf{F}_{(2M)}^{\\ast} \\left[ \\mathbf{L} \\circ \\tilde{\\mathbf{P}}\\right] \\mathbf{F}_{(2N)}^{\\ast}$ by using a fast algorithm for inverse 2D DFT;\n",
-    "6. Rearrange the rows of $\\mathbf{Q}$ to obtain the vector $\\mathbf{q}$;\n",
-    "7. Rearrange the elements of $\\mathbf{q}$ to obtain the vector $\\mathbf{w}$."
+    "<a id='eq22'></a>\n",
+    "$$\n",
+    "\\mathbf{p}_{k} = \\begin{bmatrix}\n",
+    "\\mathbf{x}_{k} \\\\\n",
+    "\\mathbf{0}_{P}\n",
+    "\\end{bmatrix} \\: , \\tag{22}\n",
+    "$$\n",
+    "\n",
+    "<a id='eq23'></a>\n",
+    "$$\n",
+    "\\mathbf{q}_{k} = \\begin{bmatrix}\n",
+    "\\mathbf{y}_{k} \\\\\n",
+    "\\mathbf{0}_{P}\n",
+    "\\end{bmatrix} \\tag{23}\n",
+    "$$\n",
+    "\n",
+    "and $\\mathbf{0}_{P}$ is a $P \\times 1$ vetor of zeros."
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "N = 7 # order of each block\n",
-    "M = 7 # number of blocks along the row\n",
+    "By using the properties of BCCB matrices (e.g., [equation 9c](#eq9c)), the auxiliary matrix-vetor product ([equation 19](#eq19)) can be rewritten as follows:\n",
     "\n",
-    "v = np.random.rand(M*N)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "extended_v = []\n",
-    "for vl in np.split(v, M):\n",
-    "    extended_v.append(np.hstack([vl, np.zeros(N)]))\n",
-    "extended_v = np.hstack(extended_v)\n",
-    "extended_v = np.hstack([extended_v, np.zeros(2*M*N)])\n",
+    "<a id='eq24'></a>\n",
+    "$$\n",
+    "\\mathbf{F}_{(2P)}^{\\ast} \\left[ \\mathbf{L} \\circ \\left( \\mathbf{F}_{(2P)} \\, \\mathbf{P} \\, \\mathbf{F}_{(2Q)} \\right) \\right] \\mathbf{F}_{(2Q)}^{\\ast} = \\mathbf{Q} \\: , \\tag{24}\n",
+    "$$\n",
     "\n",
-    "matrix_V = np.reshape(extended_v, (2*M, 2*N))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns = 17*np.random.rand(2*M -1, N) + 3\n",
-    "rows = 17*np.random.rand(2*M -1, N-1) + 3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "columns[3:,:] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rows[3:,:] = 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.close('all')\n",
-    "\n",
-    "fig, ax = plt.subplots(nrows=1, ncols=1, figsize=(5, 5))\n",
-    "\n",
-    "im = ax.imshow(matrix_V, cmap='gist_rainbow_r',\n",
-    "               vmin=np.min(matrix_V), vmax=np.max(matrix_V))\n",
-    "fig.colorbar(im, ax=ax, orientation='horizontal')\n",
-    "ax.set_title('Matrix V')\n",
-    "ax.set_xticklabels('')\n",
-    "ax.set_yticklabels('')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cases = ['SBTSTB', 'BTSTB', 'SBTTB', 'BTTB']\n",
-    "\n",
-    "T = [ts.general_BTTB(M, columns[:M]),\n",
-    "     ts.general_BTTB(M, columns),\n",
-    "     ts.general_BTTB(M, columns[:M], rows[:M]),\n",
-    "     ts.general_BTTB(M, columns, rows)]\n",
-    "\n",
-    "C = [ts.BCCB_from_BTTB(M, columns[:M]),\n",
-    "     ts.BCCB_from_BTTB(M, columns),\n",
-    "     ts.BCCB_from_BTTB(M, columns[:M], rows[:M]),\n",
-    "     ts.BCCB_from_BTTB(M, columns, rows)]\n",
-    "\n",
-    "L = []\n",
-    "for Ci in C:\n",
-    "    # compute the eigenvalues of BCCB\n",
-    "    L.append(ts.eigenvalues_BCCB(2*M, Ci[:,0]))\n",
-    "\n",
-    "w = []\n",
-    "for Ti in T:\n",
-    "    w.append(np.dot(Ti, v))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_W = []\n",
-    "for wi in w:\n",
-    "    Wi = np.block([[wi.reshape(M,N), np.zeros((M,N))],\n",
-    "                   [np.zeros((M,N)), np.zeros((M,N))]])\n",
-    "    matrix_W.append(Wi)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "matrix_W2 = []\n",
-    "for Li in L:\n",
-    "    matrix_W2.append(ifft2(Li*fft2(matrix_V)))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for Wi, W2i in zip(matrix_W, matrix_W2):\n",
-    "    aae(Wi[:M,:N], W2i[:M,:N])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.close('all')\n",
-    "\n",
-    "fig, axs = plt.subplots(nrows=2, ncols=2, figsize=(8, 8),\n",
-    "                        subplot_kw={'xticks': [-0.5 + i*N for i in range(2*N)], \n",
-    "                                    'yticks': [-0.5 + i*M for i in range(2*M)]})\n",
-    "\n",
-    "fig.subplots_adjust(left=0.03, right=0.97, hspace=0.3, wspace=0.5)\n",
-    "\n",
-    "for ax, case, W2i in zip(axs.flat, cases, matrix_W2):\n",
-    "    im = ax.imshow(W2i.real, cmap='gist_rainbow_r',\n",
-    "                   vmin=np.min(W2i.real), vmax=np.max(W2i.real))\n",
-    "    fig.colorbar(im, ax=ax, orientation='horizontal')\n",
-    "    ax.set_title(case)\n",
-    "    ax.grid(color='k', linestyle='-', linewidth=3)\n",
-    "    ax.set_xticklabels('')\n",
-    "    ax.set_yticklabels('')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.close('all')\n",
-    "\n",
-    "fig, axs = plt.subplots(nrows=4, ncols=2, figsize=(10, 18),\n",
-    "                        subplot_kw={'xticks': [-0.5 + i*N for i in range(2*N)], \n",
-    "                                    'yticks': [-0.5 + i*M for i in range(2*M)]})\n",
-    "\n",
-    "fig.subplots_adjust(left=0.03, right=0.97, hspace=0.3, wspace=0.5)\n",
-    "\n",
-    "for ax, case, Wi, W2i in zip(axs, cases, matrix_W, matrix_W2):\n",
-    "    im = ax[0].imshow(Wi.real, cmap='gist_rainbow_r',\n",
-    "                      vmin=np.min(Wi.real), vmax=np.max(Wi.real))\n",
-    "    fig.colorbar(im, ax=ax[0], orientation='horizontal')\n",
-    "    ax[0].set_title('True '+case)\n",
-    "    ax[0].grid(color='k', linestyle='-', linewidth=3)\n",
-    "    ax[0].set_xticklabels('')\n",
-    "    ax[0].set_yticklabels('')\n",
-    "    \n",
-    "    im = ax[1].imshow(W2i.real, cmap='gist_rainbow_r',\n",
-    "                      vmin=np.min(W2i.real), vmax=np.max(W2i.real))\n",
-    "    fig.colorbar(im, ax=ax[1], orientation='horizontal')\n",
-    "    ax[1].set_title('Computed '+case)\n",
-    "    ax[1].grid(color='k', linestyle='-', linewidth=3)\n",
-    "    ax[1].set_xticklabels('')\n",
-    "    ax[1].set_yticklabels('')\n",
-    "\n",
-    "plt.tight_layout()\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "w2 = [ts.BTTB_matrix_vector(M, columns_blocks=columns[:M], v=v),\n",
-    "      ts.BTTB_matrix_vector(M, columns_blocks=columns, v=v),\n",
-    "      ts.BTTB_matrix_vector(M, columns_blocks=columns[:M], rows_blocks=rows[:M], v=v),\n",
-    "      ts.BTTB_matrix_vector(M, columns_blocks=columns, rows_blocks=rows, v=v)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for wi, w2i in zip(w, w2):\n",
-    "    aae(wi, w2i)"
+    "where $\\mathbf{L}$ is a $2P \\times 2Q$ column-oriented matrix containing the eigenvalues of $\\mathbf{C}_{BCCB}$ ([equation 4b](#eq4b)), and $\\mathbf{P}$ and $\\mathbf{Q}$ are $2Q \\times 2P$ column-oriented matrices obtained from the vectors $\\mathbf{p}$ ([equation 20](#eq20)) and $\\mathbf{q}$ ([equation 21](#eq21))."
    ]
   }
  ],
